k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: sample-app
  labels:
    name: sample-app
