k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  annotations:
    prometheus.io/port: "8000"
    prometheus.io/scrape: "true"
spec:
  selector:
    app: sample-app
  ports:
  - protocol: "TCP"
    port: 8000
    targetPort: 8000
    name: "http"
    
  type: ClusterIP
