k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: sample-app
  # namespace: sample-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: sample-app
            port: 
              number: 8000
